@@ -446,9 +446,6 @@ BEGIN
     RTEXT           "Socket write buffer",IDC_SETTINGS_SOCKET_OUT_BUFFER,134,95,70,8
     EDITTEXT        IDC_SOCKET_OUT_BUFFER,208,93,41,14,ES_AUTOHSCROLL
     LTEXT           "B",IDC_SETTINGS_B3,252,95,16,8
-    RTEXT           "Min segment size",IDC_SETTINGS_MIN_SEGMENT_SIZE,134,112,70,8
-    EDITTEXT        IDC_MIN_SEGMENT_SIZE,208,110,41,14,ES_AUTOHSCROLL
-    LTEXT           "KiB",IDC_SETTINGS_KB3,252,112,16,8
 END
 
 IDD_NETWORKPAGE DIALOGEX 100, 0, 275, 225
