@@ -430,8 +430,7 @@
 #define IDC_WINDOWS_OPTIONS 2289
 #define IDC_WINDOWS_STARTUP 2290
 #define IDC_SETTINGS_PAGES 2291
-#define IDC_SETTINGS_MIN_SEGMENT_SIZE 2292
-#define IDC_MIN_SEGMENT_SIZE 2293
+#define IDC_SEGMENTED_DL 2293
 #define IDC_GREETZ 2294
 #define IDC_LATEST_VERSION 2295
 #define IDC_SETTINGS_PID 2296
